[package]
name = "trunk"
version = "0.1.1"
edition = "2021"
authors = ["stupendoussuperpowers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
filesize = "0.2.0"
notify = { version = "6.1.1" }
static-str = "0.2.0"

